Add forget password (didnt test it) and database configuration

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
             android:name=".StartActivity"
             android:exported="false"/>
         <activity
+            android:name=".ForgetPwd"
+            android:exported="false"/>
+        <activity
             android:name=".SplashScreenActivity"
             android:exported="true">
             <intent-filter>
