--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
             android:name=".ForgetPwd"
             android:exported="false"/>
         <activity
+            android:name=".EditPetActivity"
+            android:exported="false"/>
+        <activity
             android:name=".SplashScreenActivity"
             android:exported="true">
             <intent-filter>
