--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,16 +34,16 @@
             android:exported="false"/>
 
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="false"/>
+<!--        <activity-->
+<!--            android:name=".MainActivity"-->
+<!--            android:exported="false"/>-->
 
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCee53mPoQftyFiPs7hPGUJmYBXvEyPtrk"/>
